# nice4iot

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_NOTES.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  nm-example.py  pyproject.toml  questions.md  requirements.txt  what-is-an-iot-manager.md
.github/workflows/: release.yml  tests.yml
app/: config.py  exceptions.py  extensions.py  frontend.py  health.py  main.py  paths.py  routes.py  sbom.py  ui.py  util.py  util_json.py
app/api/: dependencies.py  device.py  file.py  provisioning.py
app/auth/: base.py  password.py
app/core/: auth.py  device.py  forwarding.py  models.py  project.py  telemetry.py
app/core/alarm/: backend.py  models.py  ui.py
app/core/device/: backend.py  data_ui.py  files_ui.py  logs_ui.py  models.py  ui.py
app/core/file/: backend.py  models.py  ui.py
app/core/forwarding/: backend.py  forwarding.py  models.py  ui.py
app/core/logging/: backend.py  logging.py  logging_util.py  models.py  ui.py
app/core/logging/file/: backend.py  logging_file_backend.py
app/core/logging/loki/: backend.py  logging_loki_backend.py
app/core/project/: backend.py  models.py  ui.py
app/core/telemetry/: backend.py  models.py  telemetry.py  telemetry_util.py  ui.py
app/core/telemetry/influxdb/: backend.py  models.py
app/core/telemetry/mimir/: mirmir_telemetry.py  prom_telemetry.py  types_pb2.py
app/core/telemetry/prometheus/: backend.py  models.py  prom_spec.proto  prom_spec_pb2.py  prometheus_telemetry.py  test_spec_pb2.py  types.proto  types_pb2.py
app/core/token/: backend.py  models.py  ui.py
app/mqtt/: backend.py  models.py  ui.py
app/ui/: device.py  forwarding_config_card.py  frontend.py  project.py  theme.py  util.py
deploy/: Caddyfile  Dockerfile  README.md  compose-build.yml  compose-develop.yml  compose-ghcr.yml  docker-compose.caddy-epaper.yml  docker-compose.caddy.yml  docker-compose.yml  entrypoint.sh
docs/: README.md  architecture.md  concepts.md  configuration.md  design_notes.md  development.md  device-api.md  extensions.md  mqtt.md  what-is-an-iot-manager.md
extensions/: README.md
nicemodel/: README.md  modelfield.py  modelform.py  modeltable.py
niceview/: fields.py  modelgrid.py
old-nicemodel/: modelfield.py  modelform.py  modeltable.py
tests/: conftest.py  test_acceptance.py  test_alarm.py  test_api_device.py  test_api_file.py  test_api_namespace.py  test_api_provisioning.py  test_auth.py  test_device_backend.py  test_extensions.py  test_lenient_json.py  test_project_defaults.py  test_sbom.py  test_telemetry_backend.py  test_ui_auth.py  test_util.py
tools/: device_client.py
