[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "nice4iot"
version = "0.1.0"
description = "IoT management platform built with NiceGUI and FastAPI"
requires-python = ">=3.12"
dependencies = [
    "nicegui",
    "uvicorn",
    "pydantic-settings",
    "protobuf>=6.33.5,<8",
    "python-snappy>=0.7.3",
    "pytz",
    "plotly",
    "niceview",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.uv.sources]
niceview = { git = "https://github.com/clausgf/niceview.git" }
