[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "nice4iot"
version = "0.1.0"
description = "IoT management platform built with NiceGUI and FastAPI"
requires-python = ">=3.12"
dependencies = [
    "nicegui",
    "uvicorn",
    "anyio",
    "pydantic-settings",
    "protobuf>=6.33.5,<8",
    "python-snappy>=0.7.3",
    "pytz",
    "plotly",
    "niceview",
    "aiomqtt>=2.5.1",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
# Optional extensions — not installed by default. The epaper-nice repository
# is private (git+ssh), so CI and plain `uv sync` must not depend on it.
# Enable with: uv sync --extra epaper
epaper = [
    "epaper-nice",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "acceptance: end-to-end lifecycle tests (deselect with -m 'not acceptance')",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.uv.sources]
niceview = { git = "https://github.com/clausgf/niceview.git" }
epaper-nice = { git = "ssh://git@gitlab.gwdg.de/epaper/epaper-nice.git" }
