[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "nice4iot"
version = "0.9.0"
description = "IoT management platform built with NiceGUI and FastAPI"
requires-python = ">=3.12"
dependencies = [
    "nicegui",
    "uvicorn",
    "anyio",
    "pydantic-settings",
    "protobuf>=6.33.5,<8",
    "python-snappy>=0.7.3",
    "pytz",
    "plotly",
    "niceview",
    "aiomqtt>=2.5.1",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
# Optional extensions — not installed by default, so CI and plain `uv sync`
# stay independent of them. Enable with: uv sync --extra epaper
# (the extra is named after the extension module it provides,
# extensions.epaper, not after the distribution shipping it, nicepaper.)
epaper = [
    "nicepaper",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 140
target-version = "py312"
# Skip generated protobuf modules — their descriptor magic trips static analysis.
extend-exclude = ["*_pb2.py"]

[tool.ruff.lint]
# Conservative set: pyflakes (real bugs: unused imports, undefined names,
# f-strings without placeholders) plus syntax errors. Style rules are left off
# to avoid churn on the existing, deliberately-formatted code base.
select = ["E9", "F"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "acceptance: end-to-end lifecycle tests (deselect with -m 'not acceptance')",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.uv.sources]
niceview = { git = "https://github.com/clausgf/niceview.git" }
nicepaper = { git = "https://github.com/clausgf/nicepaper.git" }
